fix(console): add horizontal scrollbar if the table is wider than the partent container

--- a/gravitee-apim-console-webui/src/shared/components/gio-table-wrapper/gio-table-wrapper.component.scss
+++ b/gravitee-apim-console-webui/src/shared/components/gio-table-wrapper/gio-table-wrapper.component.scss
@@ -53,6 +53,10 @@ $typography: map.get(gio.$mat-legacy-theme, typography);
     }
   }
 
+  &__table {
+    overflow-x: auto;
+  }
+
   &__footer-bar {
     background-color: mat.get-color-from-palette($background, 'card');
     min-height: 12px;
